# VoxTerm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile.test  FORK.md  LICENSE  README.md  app.py  config.py  diagnostics.py  flake.nix  index.html  install.ps1  install.sh  justfile  llama-swap-config.example.yaml  llama-swap-config.yaml  paths.py  pyproject.toml  requirements.txt  shell.nix  voxterm  voxterm.bat
.github/workflows/: android-experimental.yml  android-release.yml  ci.yml  dialogues-tests.yml  pages.yml  release.yml
android/: index.html
audio/: agreement.py  buffer.py  capture.py  merger.py  mix.py  mixer.py  noise_filter.py  platform.py  session_recorder.py  system_capture.py  transcriber.py  vad.py
audio/diarization/: engine.py  fbank.py  ipc.py  lid.py  onnx_embedder.py  proxy.py  segmentation.py
audio/speakers/: crypto.py  store.py
dev/: bench_asr.py  requirements-dev.txt
dialogues/: __init__.py  config.py  credentials.py  http.py  oauth_loopback.py  pkce.py  topos_client.py
diarization/: engine.py  fbank.py  ipc.py  onnx_embedder.py  proxy.py  segmentation.py  subprocess_worker.py
diarization/backends/: __init__.py  campplus_backend.py
dictation/: app.py  hotkey.py  loop.py
docs/: android-install.md  audio-pipeline.html  conversation-modes.md  dialogues-integration.md  diarization-fix.md  hivemind-scoping.md  index.html  ios-thinclient.md  p2p-protocol-spec.md  parakeet-asr-benchmark.md  roadmap.md  streaming-asr-benchmark.md  streaming-asr.md
docs/decisions/: 0001-easy-launch.md
docs/pages/: index.html
docs/specs/: hivemind-sink-integration.md
gui/: README.md  __main__.py  _timefmt.py  engine.py  eot.py  export.py  launcher.py  live.py  server.py  stabilize.py  test_capture_mac.py  test_capture_source.py  test_engine.py  test_eot.py  test_export.py  test_server.py  test_sherpa.py  test_stabilize.py  test_summarize.py  transcribe.py
gui/static/: analyze.js  app.js  backend-local.js  backend-remote.js  conversation.js  index.html  llm-backend.js  manifest.webmanifest  style.css  sw.js
lid/: engine.py
mobile-pair/: index.html  pair.js
network/: crypto.py  debug.py  discovery.py  hivemind.py  party.py  peer.py  segments.py  session.py
redaction/: __init__.py  engine.py  privacy_filter.py  prompts.py  tiers.py
scripts/: android-dev.sh  assert_screen.py  bench_asr.py  export_onnx.py  gui_e2e.py  ios-dev.sh  mock_backend.py  stage-mobile.sh
server/: README.md  app.py  schema.sql  store.py
server/tests/: test_upload.py
sidecar/: .env.example  .gitignore  Dockerfile  README.md  agents-client.js  package-lock.json  package.json  server.js  store.js
sidecar/test/: server.test.js
speakers/: crypto.py  store.py
src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
summarizer/: __init__.py  engine.py  prompts.py
tauri-plugin-voxasr/: .gitignore  Cargo.toml  README.md  build.rs  fetch-deps.sh
tauri-plugin-voxasr/android/: build.gradle.kts
tauri-plugin-voxasr/android/src/main/: AndroidManifest.xml
tauri-plugin-voxasr/android/src/main/java/site/nubs/voxterm/voxasr/: VoxasrPlugin.kt
tauri-plugin-voxasr/permissions/: default.toml
tauri-plugin-voxasr/permissions/autogenerated/commands/: poll_transcript.toml  start_transcribe.toml  stop_transcribe.toml
tauri-plugin-voxasr/permissions/schemas/: schema.json
tauri-plugin-voxasr/src/: lib.rs
tauri-plugin-voxllm/: .gitignore  Cargo.toml  build.rs  fetch-deps.sh
tauri-plugin-voxllm/android/: build.gradle.kts
tauri-plugin-voxllm/android/src/main/: AndroidManifest.xml
tauri-plugin-voxllm/android/src/main/java/site/nubs/voxterm/voxllm/: VoxllmPlugin.kt
tauri-plugin-voxllm/permissions/: default.toml
tauri-plugin-voxllm/permissions/autogenerated/commands/: cancel_generate.toml  llm_available.toml  poll_generate.toml  start_generate.toml
tauri-plugin-voxllm/permissions/schemas/: schema.json
tauri-plugin-voxllm/src/: lib.rs
tests/: benchmark_agreement.py  benchmark_diarization.py  conftest.py  test_agreement.py  test_asr_pad_bucket.py  test_audio_merger.py  test_backends.py  test_cluster.py  test_config_store.py  test_crash_dump_perms.py  test_crypto.py  test_dialogues_http.py  test_dialogues_oauth_loopback.py  test_dialogues_pkce.py  test_dialogues_screen.py  test_diarization_accuracy.py  test_diarize_offline.py  test_diarizer_respawn_lock.py  test_embed_pad_bucket.py  test_engine_state.py  test_events.py  test_fbank.py  test_hivemind.py  test_ipc.py  test_mic_system_mixer.py  test_noise_filter.py  test_onnx_embedder.py  test_p2p_e2e.py  test_p2p_mesh_heal.py  test_p2p_udp_telemetry.py  test_parakeet_perf.py  test_proxy_crash.py  test_redaction.py  test_redaction_privacy_filter.py  test_remote_upload.py  test_seg_pad_bucket.py  test_session_recorder.py  test_speaker_models.py  test_speaker_store.py  test_subprocess_worker.py  (+3 more)
transcriber/: agreement.py  engine.py
tui/: app.py  clipboard.py  events.py  remote_upload.py  text_split.py
tui/llm/: flowchart_gen.py
tui/widgets/: confirm_screen.py  cyberpunk.tcss  dialogues_screen.py  flowchart.py  header.py  hivemind_screen.py  recording_pulse.py  redaction_screen.py  summary_screen.py  transcript.py  transcript_explorer.py
widgets/: transcript.py
