[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxterm"
version = "0.3.0"
description = "Local real-time voice transcription TUI with speaker diarization"
readme = "README.md"
license = "MIT"
# Upper bound: onnxruntime is capped <1.24 (see below) and ORT has no wheels
# below 1.24.1 for Python 3.14, so 3.14 can't get a leak-free runtime yet.
requires-python = ">=3.12,<3.14"
dependencies = [
    "cryptography>=42.0.0",
    "numpy>=2.0.0",
    # Cap <1.24: onnxruntime 1.24.0 introduced a ~11 MB-per-`session.run`
    # heap leak (measured, not shape-driven, not fixable via session options)
    # that drives multi-GB RSS growth over long diarization sessions. 1.23.x
    # is the last leak-free release. Re-test before raising this ceiling.
    "onnxruntime>=1.16.0,<1.24",
    "scipy>=1.10.0",
    "silero-vad>=5.1",
    "sounddevice>=0.5.0",
    "textual>=8.0.0",
    "zeroconf>=0.131.0",
    # macOS Apple Silicon: MLX-based transcription
    "mlx-qwen3-asr>=0.3.5; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "parakeet-mlx>=0.5.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.19.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    # macOS Intel: MLX is unavailable, use the cross-platform Whisper backend.
    "faster-whisper>=1.0.0; sys_platform == 'darwin' and platform_machine != 'arm64'",
    # Linux: PyTorch/faster-whisper transcription
    "faster-whisper>=1.0.0; sys_platform == 'linux'",
    "Pillow>=10.0.0; sys_platform == 'linux'",
    "pystray>=0.19.0; sys_platform == 'linux'",
    "python-xlib>=0.33; sys_platform == 'linux'",
    "qwen-asr>=0.0.6; sys_platform == 'linux'",
    "torch>=2.0.0; sys_platform == 'linux'",
    # Windows: PyTorch/faster-whisper transcription
    "faster-whisper>=1.0.0; sys_platform == 'win32'",
    "Pillow>=10.0.0; sys_platform == 'win32'",
    "pystray>=0.19.0; sys_platform == 'win32'",
    "qwen-asr>=0.0.6; sys_platform == 'win32'",
    "torch>=2.0.0; sys_platform == 'win32'",
]

[project.scripts]
voxterm = "tui.app:main"
voxterm-dictate = "dictation.app:main"

[project.urls]
Homepage = "https://github.com/dmarzzz/VoxTerm"
Repository = "https://github.com/dmarzzz/VoxTerm"

[tool.hatch.build.targets.wheel]
packages = [
    "audio",
    "config.py",
    "diagnostics.py",
    "dictation",
    "network",
    "summarizer",
    "tui",
]
