[package]
name = "app"
version = "0.1.0"
description = "VoxTerm desktop shell — a native window over the local transcription engine"
authors = ["VoxTerm contributors"]
license = "MIT"
repository = "https://github.com/dmarzzz/VoxTerm"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
rand = "0.8"
# On-device streaming ASR (sherpa-onnx). The Android plugin carries the native engine; on
# desktop/iOS the crate is a no-op stub (so it's a plain dep the Tauri CLI can discover + wire
# the Android module). Only registered on mobile (see lib.rs #[cfg(mobile)]).
tauri-plugin-voxasr = { path = "../tauri-plugin-voxasr" }

# Desktop only: spawn the Python engine as a scoped sidecar. Mobile is a thin client
# (no local engine), so the shell plugin isn't compiled there.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
